--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,4 +1,3 @@
-
 header {
     top: 0;
     max-width: 1500px;
@@ -13,6 +12,12 @@ header {
     align-items: center;
     margin: 25px auto 0px auto;
     padding: 0 20px;
+}
+
+@media(min-width:430px) {
+    .headerDestroy {
+        margin-bottom: 128px;
+    }
 }
 
 .header__block__logo {
@@ -180,9 +185,11 @@ header {
     border-top: 2px solid #E0E0E0;
     margin-top: 20px;
 }
-.header__block__genre a{
+
+.header__block__genre a {
     color: #131441;
 }
+
 .header__block__genre {
     font-size: 16px;
     line-height: 20px;
@@ -276,23 +283,26 @@ header {
 .btn-menu {
     position: fixed;
 }
-.header__screen{
+
+.header__screen {
     margin-bottom: 114px;
 }
+
 /*.header__container__bottom {position: absolute; top: 90%; left: 50%; transform: translateX(-50%);*/
 /*    width: fit-content;}*/
 
 
 
 @media screen and (max-width: 1099.97px) {
- .container__header__burger{
-    width: 100%;
-    position: fixed;
+    .container__header__burger {
+        width: 100%;
+        position: fixed;
 
- }
- .btn-menu{
-    z-index: 1002;
- }
+    }
+
+    .btn-menu {
+        z-index: 1002;
+    }
 
 
     .header__menu__link {
@@ -423,7 +433,7 @@ header {
 
 @media screen and (max-width: 1099.97px) {
 
-    header{
+    header {
         top: 0;
         margin: 0 auto;
         padding-top: 25px;
@@ -433,10 +443,12 @@ header {
         z-index: 1001;
         min-width: 100%;
     }
+
     .header__block__menu {
         margin-top: 80px;
         border-top: 2px #E0E0E0 solid;
     }
+
     #naiv {
         display: none;
     }
@@ -623,6 +635,7 @@ header {
     .header__screen {
         margin-bottom: 67px;
     }
+
     .btn-menu .line,
     .btn-menu .line::after,
     .btn-menu .line::before {
@@ -716,8 +729,8 @@ header {
 }
 
 
-@media(min-width:1099.77px){
-    header{
+@media(min-width:1099.77px) {
+    header {
         margin: 0 auto;
         background-color: #F7F7F7;
         width: 100%;
