--- a/assets/css/extreme.css
+++ b/assets/css/extreme.css
@@ -3,7 +3,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body {background-color:  #F7F7F7;}
 /*Карказ ДЕСКТОП*/
 main {max-width: 1500px; margin: 0 auto; position: relative;}
-.btn__fdback__ZK { background: #3B32F5; border-radius: 10px; padding: 22px 30px 20px; gap: 10px;
+.btn__fdback__ZK { font-size:14px; background: #3B32F5; border-radius: 10px; padding: 22px 30px 20px; gap: 10px;
     align-items: center; color: #FFFFFF;}
 
 .btn__fdback__ZK:hover { background: #6A63FF; box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);}
