--- a/assets/css/electro_guitar.css
+++ b/assets/css/electro_guitar.css
@@ -31,7 +31,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
 .course_card__text_ZK { gap:30px; max-width: 536px; font-size: 16px; line-height: 130%; color: #FFFFFF;}
 .come__to__us {font-size: 16px; line-height: 20px; text-transform: uppercase;  color: #FFFFFF; margin-bottom: 10px;}
 .card_label_for__chk{font-size: 14px; line-height: 130%; color: #FFFFFF;}
-.block__contacts__time, .block__contacts__geo { padding-right: 40px; width: 345px; font-size: 16px; line-height: 130%; color: #FFFFFF;}
+.block__contacts__time, .block__contacts__geo { padding-right: 40px; width: 351px; font-size: 16px; line-height: 130%; color: #FFFFFF;}
 .block__contacts__time{ padding-bottom: 8px;}
 .block__in__card__elem__top{width: fit-content; margin-left: auto; margin-bottom: 60px; padding-top:20px; }
 .block__in__card__elem__center{ margin-left: 190px; padding-bottom:  150px;}
@@ -41,7 +41,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
 .block__clock__text__ZK{ display: flex; gap:5px;}
 .course__img__clock__ZK{ width: 23px; height: 23px; padding-right: 8px;}
 .course__img__geo__ZK{ width: 23px; height: 23px;padding-right: 8px;}
-.note__micro__ZK{position: absolute; right:10px; top: 8px;}
+
 .crs__block__photo__boys{
     display: flex; align-items: start;
     margin-left: 200px;
@@ -59,18 +59,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
     .crs__electro__boy__2{   height: 400px;}
 
 }
-@media(max-width: 1430px){
-    .note__micro__ZK{
-        display: block;
-        left: 773px;
-        top: 46px;
-    }
-    .note__micro__ZK svg{
-        width: 300px;
-        height: 300px;
-    }
 
-}
 @media(max-width: 1350px){
     .crs_scnd__cont_for_sg {
         display: none;
@@ -82,17 +71,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
 .main__card__course { border-radius: 20px; margin: 0 10px 0 10px; background: url("../img/background__feedback__electro__desktop.png"); background-repeat: no-repeat; background-position: center center; background-size: cover; opacity: 1;}
 
 
-@media(max-width: 1085px){
-    .note__micro__ZK{
-        display: block;
-        left: 767px;
-        top: 80px;
-    }
-    .note__micro__ZK svg{
-        width: 200px;
-        height: 200px;
-    }
-}
+
 @media (max-width: 992px){
     .crs__block__photo__boys{
         margin-left: 10px;
@@ -134,10 +113,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
     .crs__electro__boy__2{   height: 300px;}
 }
 
-@media(max-width: 797px){
-    .note__micro__ZK{
-        display: none;}
-}
+
 @media (max-width: 577px){
     .main__card__course{background: url("../img/background__feedback__electro__mobile.png"); background-position: top center;    background-size: cover;}
     .crs__block__photo__boys{
@@ -168,7 +144,7 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
     .course_card__text_ZK,.come__to__us{font-size: 14px;
         width: 100%;}
     .card_label_for__chk{font-size: 12px;}
-    .note__micro__ZK{display: none;}
+
     .inp_txt__ZK, .btn__fdback__ZK {
         width: 100%; margin: 0}
     .btn__fdback__ZK{ margin-top: 10px;}
@@ -401,6 +377,23 @@ main {max-width: 1500px; margin: 0 auto;  position: relative;}
         font-size: 18px;
     }
     .course__hdl__rr{font-size: 65px;}
+}
+
+
+.note__micro__ZK{position: absolute; right: 144px;
+    top: 62px;}
+@media(max-width: 1359px){
+    .note__micro__ZK{
+        display: none;
+    }
+
+
+}
+@media (max-width: 992px){
+.note__micro__ZK svg{
+        width: 250px;
+        height: 250px;
+    }
 }
 
 /*   БЛОК - УЖЕ ЧЕРЕЗ 2 МЕСЯЦА ЗАНЯТИЙ   */
