--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -33,7 +33,7 @@ header {
     align-items: center;
     background-color: #FFFFFF;
     border-radius: 20px;
-    padding: 0 5px;
+    padding:  0 5px;
     z-index: 2
 }
 
@@ -112,7 +112,7 @@ header {
 .header__menu__link.active__header {
     color: white;
     background: #3B32F5;
-    box-shadow: 2px 0px 8px -2px rgba(20, 16, 101, 0.4);
+    box-shadow: 2px 0px 8px rgb(20 16 101 / 40%);
 }
 
 .header__menu__link.active__header .header__arrow_black {
@@ -442,6 +442,9 @@ header {
         position: fixed;
         z-index: 1001;
         min-width: 100%;
+    }
+    .header__menu__list {
+        padding: 5px;
     }
 
     .header__block__menu {
